# chip8-generic

./: .gitignore  readme.md
chip8-c++/: CMakeLists.txt  build.sh  readme.md
chip8-c++/core/: core.cpp  core.hpp
chip8-c++/frontend_sdl/: main.cpp
